--- a/tsconfig.example.json
+++ b/tsconfig.example.json
@@ -2,6 +2,8 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "declaration": false,
+    "declarationMap": false,
     "outDir": "examples/dist"
   },
   "include": ["examples/nodejs/*.ts"]
