--- a/tsconfig.types.json
+++ b/tsconfig.types.json
@@ -2,9 +2,11 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "removeComments": false,
     "declaration": true,
     "declarationMap": false,
     "declarationDir": "dist/types",
     "emitDeclarationOnly": true
-  }
+  },
+  "include": ["src/*.ts", "src/**/*.ts"]
 }
