--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -2,7 +2,7 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist/nodejs/cjs",
+    "outDir": "dist/cjs",
     "module": "commonjs"
   },
   "include": ["src/*.ts", "src/**/*.ts"]
