--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -2,7 +2,7 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist/nodejs/esm",
+    "outDir": "dist/esm",
     "module": "ES2020"
   },
   "include": ["src/*.ts", "src/**/*.ts"]
