--- a/examples/nodejs/cjs/package.json
+++ b/examples/nodejs/cjs/package.json
@@ -4,13 +4,14 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "tsc && node .",
+    "start": "ts-node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "tslog": "^4.4.0-0"
+    "tslog": "^4.4.0-1"
   },
   "devDependencies": {
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   }
 }
