--- a/examples/nodejs/esm/package.json
+++ b/examples/nodejs/esm/package.json
@@ -4,13 +4,14 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "tsc && node . --experimental-specifier-resolution=node",
+    "start": "ts-node . --experimental-specifier-resolution=node",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "tslog": "^4.4.0-0"
   },
   "devDependencies": {
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   }
 }
