--- a/examples/nodejs/cjs/package.json
+++ b/examples/nodejs/cjs/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "tslog": "^4.4.0-1"
+    "tslog": "latest"
   },
   "devDependencies": {
     "ts-node": "^10.9.1",
