--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint"],
-  "ignorePatterns": ["dist/*", "*/dist/*", "/examples/*", "tests/*", "*/tests/*", "build.js"],
+  "ignorePatterns": ["benchmarks/*", "dist/*", "*/dist/*", "/examples/*", "tests/*", "*/tests/*", "build.js"],
   "rules": {
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "double"],
