--- a/package.json
+++ b/package.json
@@ -19,9 +19,6 @@
   "types": "./dist/types/index.d.ts",
   "browser": {
     "tslog": "./dist/browser/index.js",
-    "./dist/esm/runtime/nodejs/index.js": "./dist/esm/runtime/browser/index.js",
-    "./dist/cjs/runtime/nodejs/index.js": "./dist/cjs/runtime/browser/index.js",
-    "./src/runtime/nodejs/index.js": "./src/runtime/browser/index.js",
     "util": false
   },
   "react-native": "./dist/cjs/index.js",
@@ -40,12 +37,13 @@
     "build-types": "tsc -b tsconfig.types.json",
     "build-server": "tsc -b tsconfig.esm.json tsconfig.cjs.json && cp ./src/package-cjs.json ./dist/cjs/package.json",
     "build-example": "tsc -b tsconfig.example.json",
-    "dev-ts": "nodemon examples/nodejs/index2.ts",
-    "dev-ts-old-example": "nodemon examples/nodejs/index.ts",
+    "dev-ts": "nodemon examples/server/index2.ts",
+    "dev-ts-old-example": "nodemon examples/server/index.ts",
     "lint": "eslint --ext .js,.ts .",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
+    "pretest": "node scripts/free-test-port.cjs",
     "test": "JEST_PUPPETEER_CONFIG=jest-puppeteer.config.cjs jest",
-    "test-puppeteer-serve": "npm run build-browser && node tests/Browser/server/index.cjs -p 4444",
+    "test-puppeteer-serve": "npm run build-browser && node tests/support/browser/server/index.cjs -p 4444",
     "coverage": "JEST_PUPPETEER_CONFIG=jest-puppeteer.config.cjs jest --coverage",
     "docsify-init": "docsify init ./docs",
     "docsify-serve": "cd docs && docsify serve",
@@ -70,7 +68,7 @@
     "coveragePathIgnorePatterns": [
       "<rootDir>/node-modules/",
       "<rootDir>/tests/",
-      "<rootDir>/src/runtime/browser/"
+      "<rootDir>/src/internal/util.inspect.polyfill.ts"
     ]
   },
   "np": {
@@ -87,28 +85,28 @@
     "exec": "node --experimental-specifier-resolution=node --enable-source-maps --no-warnings --loader ts-node/esm"
   },
   "devDependencies": {
-    "@jest/types": "^28.1.3",
-    "@types/expect-puppeteer": "^5.0.1",
-    "@types/jest-environment-puppeteer": "^5.0.2",
-    "@types/node": "^17.0.29",
-    "@types/puppeteer": "^5.4.6",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "docsify": "^4.11.4",
-    "esbuild": "^0.15.15",
-    "eslint": "^8.23.0",
-    "eslint-config-prettier": "^8.5.0",
-    "husky": "^8.0.1",
-    "jest": "^28.1.3",
-    "jest-puppeteer": "^10.0.1",
-    "nodemon": "^2.0.19",
-    "np": "^7.6.2",
-    "prettier": "^2.7.1",
-    "puppeteer": "^21.0.1",
-    "ts-jest": "^28.0.8",
-    "ts-jest-resolver": "^2.0.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "@jest/types": "^30.0.5",
+    "@types/expect-puppeteer": "^5.0.6",
+    "@types/node": "^24.5.2",
+    "@types/puppeteer": "^7.0.4",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
+    "docsify": "^4.13.1",
+    "esbuild": "^0.25.10",
+    "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
+    "husky": "^9.1.7",
+    "jest": "^30.1.3",
+    "jest-puppeteer": "^11.0.0",
+    "kill-port": "^2.0.1",
+    "nodemon": "^3.1.10",
+    "np": "^10.2.0",
+    "prettier": "^3.6.2",
+    "puppeteer": "^24.22.3",
+    "ts-jest": "^29.4.4",
+    "ts-jest-resolver": "^2.0.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   },
   "sideEffects": false,
   "keywords": [
