--- a/tsconfig.example.json
+++ b/tsconfig.example.json
@@ -7,5 +7,5 @@
     "outDir": "examples/dist",
     "moduleResolution": "node"
   },
-  "include": ["examples/nodejs/*.ts"]
+  "include": ["examples/server/*.ts"]
 }
