--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,11 @@ jobs:
 
         strategy:
             matrix:
-                node-version: [16.x, 18.x]
+                node-version: [20.x]
 
         env:
             CI: true
-            COVERAGE: ${{ matrix.node-version == '18.x' && true || false }}
+            COVERAGE: ${{ matrix.node-version == '20.x' && true || false }}
 
         steps:
             - uses: actions/checkout@v3
