Fix path in np configuration to remove leading dot in contents

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   },
   "np": {
     "yarn": false,
-    "contents": "./dist"
+    "contents": "dist"
   },
   "publishConfig": {
     "access": "public"
