Enhance pre-commit hook to check for npm availability and update package.json paths

--- a/package.json
+++ b/package.json
@@ -57,10 +57,11 @@
   },
   "np": {
     "yarn": false,
-    "contents": "dist"
+    "contents": "./dist"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "directory": "dist"
   },
   "nodemonConfig": {
     "watch": [
