--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -3,7 +3,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "dist/cjs",
-    "module": "NodeNext"
+    "module": "CommonJS",
+    "moduleResolution": "Node10"
   },
   "include": ["src/*.ts", "src/**/*.ts"]
 }
